--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -6,20 +6,8 @@ jobs:
     name: Build my artifact
     runs-on: ubuntu-latest
     steps:
-      - name: Show current disk space
-        run: df -h
-      - name: Maximize build space
-        uses: easimon/maximize-build-space@master
-        with:
-          root-reserve-mb: 512
-          swap-size-mb: 1024
-          remove-dotnet: 'true'
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Build
-        run: |
-          echo "Free space:"
-          df -h
       - name: SHow the thing
-        run: echo $GITHUB_HEAD_REF
+        run: echo ${{ env.GITHUB_HEAD_REF }}
