--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -10,4 +10,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: SHow the thing
-        run: echo ${{ env.GITHUB_HEAD_REF }}
+        run: echo ${GITHUB_REF}
