--- a/.github/workflows/run.yaml
+++ b/.github/workflows/run.yaml
@@ -10,4 +10,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: SHow the thing
-        run: echo ${GITHUB_REF}
+        run: echo ${GITHUB_HEAD_REF}
+
+      - run: echo ${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}
+
+      - name: Show another thing
+        run: echo ${{ github.ref_name }}
